[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myapp"
version = "2020.0"
description = "Lovely Spam! Wonderful Spam!"
dependencies = [
  "numpy",
]
requires-python = ">=3.9"
authors = [
  {name = "Another person", email = "person@example.com"},
]
readme = "README.md"
keywords = ["development"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/fekad/agile-development"
Documentation = "https://fekad.github.io/agile-development"
Repository = "https://github.com/fekad/agile-development.git"

